Added Group Class and testng.xml file

--- a/addressbook-selenium-tests/build.gradle
+++ b/addressbook-selenium-tests/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation 'org.testng:testng:7.1.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
 }
-test{
-    useTestNG()
+test {
+    useTestNG {
+        suites 'src/test/resources/testng.xml'
+    }
 }
