Worcing version GroupDeletion, GroupModification and GroupCreation tests.

--- a/addressbook-selenium-tests/build.gradle
+++ b/addressbook-selenium-tests/build.gradle
@@ -16,7 +16,6 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
 }
 test {
-    useTestNG {
-        suites 'src/test/resources/testng.xml'
+    useTestNG() {
     }
 }
